feat: add homepage and  config the posts.

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,8 +1,8 @@
-endi:
-  name: Endilie Yacop Sucipto
-  title: Maintainer of Docusaurus
-  url: https://github.com/endiliey
-  image_url: https://github.com/endiliey.png
+norman:
+  name: Norman pong
+  title: 顺其自然以后，再也不会遗憾
+  url: https://github.com/norman-pong
+  image_url: https://blog.zhiming.cool/wp-content/uploads/2023/10/头像-e1697790982263.jpg
 
 yangshun:
   name: Yangshun Tay
