chore: add sls deploy script

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "docusaurus",
-  "version": "0.0.0",
+  "name": "norman-site",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
@@ -8,6 +8,7 @@
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
+    "deploy:sls": "serverless-cloud-framework deploy",
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
